--- a/openapi.html
+++ b/openapi.html
@@ -107,7 +107,7 @@
         let currentList = [];
         let currentPage = 1;
         const itemsPerPage = 10;
-        const API_URL = 'https://100exopenapi.sokdana2233.workers.dev/?url=http://openapi.100ex.com/open/api/common/symbols&token=fd0a680fdf140544dad657baec88b3a0b07c19640e098f915f66ab7a738d4e6b';
+        const API_URL = 'https://100exopenapi.sokdana2233.workers.dev/?url=http://openapi.100ex.com/open/api/common/symbols';
 
         // --- DOM 元素引用 ---
         const searchInput = document.getElementById('search-input');
